--- a/report/report/report/receivable_report/receivable_report.html
+++ b/report/report/report/receivable_report/receivable_report.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="right" style="text-align: right; flex-grow: 1; padding-left: 20px;">
-            <h3 style="color: #32368d; font-size: 30px; margin-bottom: 2px; border-bottom: 1px solid red;">شركة شعلة الامتياز للتجارة</h3>
+            <h3 style="color: #32368d; font-size: 30px; margin-bottom: 2px; ">شركة شعلة الامتياز للتجارة</h3>
             <h3 style="color: #32368d; margin-top: 0px; font-weight: 600;">SHAALA AL AMTIAZ COMPANY</h3>
             <p style="color: #32368d;">CR No: 1010322666 - VAT No: 311987999100003</p>
         </div>
