--- a/report/report/report/receivable_report/receivable_report.html
+++ b/report/report/report/receivable_report/receivable_report.html
@@ -194,10 +194,10 @@
     %}
 
     <div class="summary">
-        <div class="summary-row">
+        <!-- <div class="summary-row">
             <span class="label">Invoiced Amount:</span> 
             <span><strong>SAR {%= total_amt.toFixed(2) %}</strong></span>
-        </div>
+        </div> -->
         <div class="summary-row">
             <span class="label">Balance Due:</span> 
             <span><strong>SAR {%= (data[data.length - 1].balance || 0).toFixed(2) %}</strong></span>
